--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -45,7 +45,7 @@ body {
   margin: 10px;
   padding: 15px;
   border-radius: 25px;
-  background-color: black;
+  background-color: rgb(252,52,104);
   font-weight: 600;
   color: white;
   border: 0px;
